Dodana ocena pri prikazu ocenjenih termina

--- a/ProjekatSpring/src/main/resources/static/HTML/neocenjeni.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/neocenjeni.html
@@ -25,6 +25,11 @@
                     <th colspan = "3">Treninzi</th>
                     <th colspan="5">Raspored termina</th>                   
                 </tr>
+                <tr id="unos" style="display: none;">
+                    <th colspan = "6"></th>
+                    <th><input class="center" id="unos-ocene" placeholder="Unesite ocenu"> <br> <br> </th>
+                    <th><button id = "sbm" class="button1">Pošalji</button></th>   
+                </tr>
                 <tr>
                     <th style="cursor: pointer;">Naziv treninga</th>
                     <th style="cursor: pointer;">Opis treninga</th>
