--- a/ProjekatSpring/src/main/resources/static/HTML/ocenjeni.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/ocenjeni.html
@@ -23,7 +23,7 @@
             <table id = "termini">
                 <tr>
                     <th colspan = "3">Treninzi</th>
-                    <th colspan="5">Raspored termina</th>                   
+                    <th colspan="6">Raspored termina</th>  
                 </tr>
                 <tr>
                     <th style="cursor: pointer;">Naziv treninga</th>
@@ -33,6 +33,7 @@
                     <th style="cursor: pointer;">Kraj termina</th>
                     <th style="cursor: pointer;">Trajanje termina</th>
                     <th style="cursor: pointer;">Cena termina</th>
+                    <th style="cursor: pointer;">Ocena</th>
                 </tr>
             </table>
             <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>
