Odabir treninga iz rezultata pretrage

--- a/ProjekatSpring/src/main/resources/static/HTML/profil.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/profil.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="navigation-bar-log" class="center">
-        <span><a href="termin.html">Pregled termina</a> </span>
+        <span><a href="terminclan.html">Pregled termina</a> </span>
         <span><a href="prijava-na-termin.html">Prijava na termin</a> </span>
         <span><a href="prijavljeni.html">Prijavljeni treninzi</a></span>
         <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
