--- a/ProjekatSpring/src/main/resources/static/HTML/prijava-na-termin.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/prijava-na-termin.html
@@ -10,7 +10,7 @@
     <body style="color: white;">
             <div class="center" id="container">
                 <div id="navigation-bar-reg" class="center">
-                    <span><a href="termin.html">Pregled termina</a> </span>
+                    <span><a href="terminclan.html">Pregled termina</a> </span>
                     <span><a href="prijava-na-termin.html">Prijava na termin</a> </span>
                     <span><a href="prijavljeni.html">Prijavljeni treninzi</a></span>
                     <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
