Pregled profila clana

--- a/ProjekatSpring/src/main/resources/static/HTML/clan.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/clan.html
@@ -18,7 +18,7 @@
             <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
             <span><a href="neocenjeni.html">Neocenjeni treninzi</a></span>
             <span><a href="ocenjeni.html">Ocenjeni treninzi</a></span>
-            <span><a href="#">Profil</a></span>
+            <span><a href="profil.html">Profil</a></span>
         </div>
 
        <span><a id="log" href="../index.html"><button style="position: absolute; top: 15px; right: 15px;" class="button1" onclick="logout()">LOG OUT</a></span>
