--- a/ProjekatSpring/src/main/resources/static/HTML/ocenjeni.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/ocenjeni.html
@@ -16,7 +16,7 @@
                     <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
                     <span><a href="neocenjeni.html">Neocenjeni treninzi</a></span>
                     <span><a href="ocenjeni.html">Ocenjeni treninzi</a></span>
-                    <span><a href="#">Profil</a></span>
+                    <span><a href="profil.html">Profil</a></span>
                 </div>                
             </div>
             
