--- a/ProjekatSpring/src/main/resources/static/HTML/prikaz-termina.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/prikaz-termina.html
@@ -15,7 +15,7 @@
             <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
             <span><a href="neocenjeni.html">Neocenjeni treninzi</a></span>
             <span><a href="ocenjeni.html">Ocenjeni treninzi</a></span>
-            <span><a href="#">Profil</a></span>
+            <span><a href="profil.html">Profil</a></span>
         </div>
 
         <table id="termini" style="border: none; margin-top: 2em; width: 60%; margin-left: 20%; margin-right: 20%;">
@@ -39,5 +39,6 @@
                 <th>Ocene termina: </th>
             </tr>
         </table>
+        <span><a id="log" href="../index.html"><button class="button1" onclick="logout()">LOG OUT</a></span>
     </body>
 </html>
