--- a/ProjekatSpring/src/main/resources/static/HTML/terminclan.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/terminclan.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Training schedule</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../style2.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
         <script src="../js/terminclan.js"></script>
     </head>
@@ -16,7 +16,7 @@
                     <span><a href="odradjeni.html">Odradjeni treninzi</a></span>
                     <span><a href="neocenjeni.html">Neocenjeni treninzi</a></span>
                     <span><a href="ocenjeni.html">Ocenjeni treninzi</a></span>
-                    <span><a href="#">Profil</a></span>
+                    <span><a href="profil.html">Profil</a></span>
                 </div>
                 
                 <div id="form-search" style="width: 600px; margin-left: auto; margin-right: auto;">
