Popravljeni neki bugovi

--- a/ProjekatSpring/src/main/resources/static/HTML/terminclan.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/terminclan.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Training schedule</title>
-        <link rel="stylesheet" href="../style2.css">
+        <link rel="stylesheet" href="../styles.css">
         <script src="../js/jquery-3.6.0.min.js"></script>
         <script src="../js/terminclan.js"></script>
     </head>
