--- a/ProjekatSpring/src/main/resources/static/HTML/profil.html
+++ b/ProjekatSpring/src/main/resources/static/HTML/profil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../style2.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/profil.js"></script>
     <title>Vaš profil</title>
